Add FAQ for locking tags to specific monitors

--- a/www/faq.txt
+++ b/www/faq.txt
@@ -279,6 +279,64 @@ Note that +$Mod-p+ is bound to +pseudotile toggle+ in the default
 autostart of herbstluftwm, so you either need to change that binding or
 use a different one for +spawn dmenu_run_hlwm+.
 
+Q: How can I have some of the tags on specific monitors only?
+-------------------------------------------------------------
+For each tag, save the desired monitor name or index in the tag's attributes.
+Before switching to another tag, check whether it has such an attribute, and if
+so, switch to that monitor first. This is accomplished by the following code in
+the autostart:
+----
+# Replace the default section for tags in your autostart by the following:
+# This is the default tag section of the autostart, with a single change:
+# In the use_index keybinding, check the presence of the my_monitor attribute,
+# before focusing the desired tag.
+hc rename default "${tag_names[0]}" || true
+for i in ${!tag_names[@]} ; do
+    hc add "${tag_names[$i]}"
+    key="${tag_keys[$i]}"
+    if ! [ -z "$key" ] ; then
+        # first check if the tag is locked to some monitor.
+        # if so, first focus the monitor
+        hc keybind "$Mod-$key" \
+            chain , silent substitute M tags."$i".my_monitor \
+                        focus_monitor M \
+                  , use_index "$i"
+        hc keybind "$Mod-Shift-$key" move_index "$i"
+    fi
+done
+
+# Add a keybinding for locking the current tag to the monitor it is displayed
+# on. This is done by safing the current monitor index in the my_monitor
+# attribute of the focused tag. If the monitor has a (nonempty) name, use the
+# monitor name instead of its index.
+herbstclient keybind $Mod-t chain \
+    , new_attr string tags.focus.my_monitor \
+    , substitute M monitors.focus.index set_attr tags.focus.my_monitor M \
+    , try and \
+        . compare monitors.focus.name != "" \
+        . substitute M monitors.focus.name \
+                set_attr tags.focus.my_monitor M
+
+# Add a keybinding for removing the lock
+herbstclient keybind $Mod-Shift-t \
+    remove_attr tags.focus.my_monitor
+
+# Statically define which tag should be send to which monitor
+lock_tag_to_monitor() {
+    herbstclient chain \
+        , new_attr string tags.by-name."$1".my_monitor \
+        , set_attr tags.by-name."$1".my_monitor "$2"
+}
+# Already lock some of the tags to a monitor, for example:
+# lock the second tag to the monitor with index 0
+lock_tag_to_monitor 2 0
+----
+The usage is: adjust the +lock_tag_to_monitor+-lines in your autostart to
+statically define which tag should be send to which monitor. Press Mod-t to
+lock the focused tag to the monitor it is currently on. Press Mod-Shift-t to
+release the locking and to allow the tag to be displayed on any monitor.
+
+
 
 Q: How can I have a seperate list of tags per monitor?
 ------------------------------------------------------
