--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
+Current git version
+-------------------
+
+    * Fix the initial floating position of new windows by taking their
+      position relative to the nearest hlwm monitor.
+
 Release 0.7.0 on 2016-02-04
 ---------------------------
 
