--- a/winterbreeze.asciidoc
+++ b/winterbreeze.asciidoc
@@ -12,3 +12,7 @@ the following, all user-visible changes are listed:
     * +monitors..+ is valid
     * +monitors.by-name.+ is valid
     * +monitors..by-name.+ is *invalid*
+
+ - the 'toggle' command does not toggle between zero and the last non-zero value
+   anymore but simply between 0 and 1. For the former behaivour, one needs to use
+   'cycle_value'.
