Mention bugfixes in NEWS

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,10 @@ herbstluftwm NEWS -- History of user-visible changes
 Current git version
 -------------------
 
+    * Many bugfixes:
+      - Fix Xlib race condition
+      - Fix _NET_DESKTOP_VIEWPORT
+      - etc
     * New setting: verbose
     * Fix the initial floating position of new windows by taking their
       position relative to the nearest hlwm monitor.
