--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
-Current git version
--------------------
+Release 0.7.1 on 2018-08-09
+---------------------------
 
     * Many bugfixes:
       - Fix Xlib race condition
