--- a/INSTALL
+++ b/INSTALL
@@ -1,6 +1,6 @@
 ===== HERBSTLUFTWM =====
 
-Copyright 2011-2013 Thorsten Wißmann. All rights reserved.
+Copyright Thorsten Wißmann and contributors. All rights reserved.
 
 This software is licensed under the "Simplified BSD License".
 See LICENSE for details.
@@ -33,13 +33,13 @@ Mailing list: hlwm@lists.herbstluftwm.org
 
 For instant help join the IRC channel: #herbstluftwm on irc.freenode.net
 
-==== Steps with installing ====
-If you are using a system with a package manager, then install it via the
-package manager of your distribution! If you are not allowed to install
-software, then contact your system administrator.
+==== Installation steps ====
+If you are using a system with a package manager, we recommend to install via
+the package manager of your distribution! If you are not allowed to install
+software, you should contact your system administrator.
 
-You only need to install it manually if you do not like package managers or if
-you are creating a package for your distribution.
+You only need to install herbstluftwm manually if you do not like package
+managers or if you are creating a package for your distribution.
 
 The CMake build system is used. It is recommended to use an out-of-tree build
 directory. The compilation and installation is configured by the following CMake
@@ -50,7 +50,7 @@ CMAKE_INSTALL_SYSCONF_ = $(DESTDIR)/etc/  # path to etc directory
 
 Individual paths for special files can be set with the *DIR variables, typically
 relative to CMAKE_INSTALL_PREFIX. If you are building package, you would
-typically build as usual, but install with DESTDIR=./path/to/fakeroot argument.
+typically build regularly, and install with DESTDIR=./path/to/fakeroot.
 
     make
     sudo make DESTDIR=./pkg/ install
@@ -80,8 +80,8 @@ To use the software locally, create your own autostart file:
    or source it in your bashrc
 6. run it in a session that has no windowmanager yet
 
-==== Starting it ====
-Start it within a running X-session with:
+==== Starting Herbstluftwm ====
+To start the window manager within a running X-session, execute:
 
     herbstluftwm --locked
 
