--- a/INSTALL
+++ b/INSTALL
@@ -7,7 +7,7 @@ See LICENSE for details.
 
 ==== Requirements ====
 Build dependencies:
-    - build environment (e.g. gcc, clang; make, ninja)
+    - build environment (e.g. gcc or clang, make)
     - CMake 3.1 or later
     - asciidoc (only when building from git, not when building from tarball)
     - a posix system with _POSIX_TIMERS and _POSIX_MONOTONIC_CLOCK or a system
