--- a/winterbreeze.asciidoc
+++ b/winterbreeze.asciidoc
@@ -16,3 +16,6 @@ the following, all user-visible changes are listed:
  - the 'toggle' command does not toggle between zero and the last non-zero value
    anymore but simply between 0 and 1. For the former behaivour, one needs to use
    'cycle_value'.
+
+ - Writing '%%' in the 'sprintf' format string now gives a literate '%', just
+   as printf. Formely it stayed '%%'.
