--- a/winterbreeze.asciidoc
+++ b/winterbreeze.asciidoc
@@ -13,9 +13,11 @@ the following, all user-visible changes are listed:
     * +monitors.by-name.+ is valid
     * +monitors..by-name.+ is *invalid*
 
- - the 'toggle' command does not toggle between zero and the last non-zero value
-   anymore but simply between 0 and 1. For the former behaivour, one needs to use
-   'cycle_value'.
+ - Many boolean style settings were formely of type int. Now, these are
+   boolean settings.
+
+ - The 'toggle' command only works for boolean settings. For the former
+   behaviour for int-typed settings, use 'cycle_value'.
 
  - Writing '%%' in the 'sprintf' format string now gives a literate '%', just
    as printf. Formely it stayed '%%'.
