Mention herbstclient detection in NEWS

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,8 @@ herbstluftwm NEWS -- History of user-visible changes
 Current git version
 -------------------
 
+   * When herbstluftwm is not running and herbstclient is called, the
+     absent herbstluftwm is detected instead of hanging forever.
    * Fix return code of remove_attr
    * Fix error when unmanaging clients
    * Some typo fixes in the documentation
