--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,28 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
+Current git version
+-------------------
+
+  * Formerly, double dots in object paths were allowed (similar to double
+    slashes in file paths in unix). Right now, they are only allowed at the end
+    (which is necessary for the tab-completion of attr):
+    - +monitors+ is valid
+    - +monitors.+ is valid
+    - +monitors..+ is valid
+    - +monitors.by-name.+ is valid
+    - +monitors..by-name.+ is *invalid*
+
+  * Many boolean style settings were formely of type int. Now, these are
+    boolean settings.
+  * The 'toggle' command only works for boolean settings. For the former
+    behaviour for int-typed settings, use 'cycle_value'.
+  * Writing '%%' in the 'sprintf' format string now gives a literate '%', just
+    as printf. Formely it stayed '%%'.
+  * The 'keybind' command now accepts all valid key symbols, even if they are
+    not present on the current keyboard layout at the time of setup.
+  * 'detect_monitors' has an additional '--list-all' parameter
+
 Release 0.7.2 on 2019-05-28
 ---------------------------
 
