--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,8 @@ Current git version
   * The 'keybind' command now accepts all valid key symbols, even if they are
     not present on the current keyboard layout at the time of setup.
   * 'detect_monitors' has an additional '--list-all' parameter
+  * do not change the focus (for focus_follows_mouse=1) when an unmanaged
+    dialog (e.g. a rofi menu or a notification) closes.
 
 Release 0.7.2 on 2019-05-28
 ---------------------------
