--- a/NEWS
+++ b/NEWS
@@ -24,6 +24,7 @@ Current git version
   * 'detect_monitors' has an additional '--list-all' parameter
   * do not change the focus (for focus_follows_mouse=1) when an unmanaged
     dialog (e.g. a rofi menu or a notification) closes.
+  * monitor detection via xrandr
 
 Release 0.7.2 on 2019-05-28
 ---------------------------
