--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,7 @@ Current git version
   * do not change the focus (for focus_follows_mouse=1) when an unmanaged
     dialog (e.g. a rofi menu or a notification) closes.
   * monitor detection via xrandr
+  * list_rules now prints regex-based rule conditions with '~' instead of '='
 
 Release 0.7.2 on 2019-05-28
 ---------------------------
