Preserve focus and client order after frame removal
When removing a frame, insert the clients of the removed frame in the
target frame at the beginning or the end, depending on how the clients
were aligned visually before the split. Moreover, preserve the client
focus.

In total, the new semantics of the 'remove' command is less 'removing
the frame' but more 'undoing the split'.

--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,8 @@ Current git version
   * monitor detection via xrandr
   * list_rules now prints regex-based rule conditions with '~' instead of '='
   * new command: export (convenience wrapper around setenv)
+  * the 'remove' command now tries to preserve the focus and the client
+    arrangement. Intutively speaking, 'remove' is undoing a frame split.
 
 Release 0.7.2 on 2019-05-28
 ---------------------------
