--- a/NEWS
+++ b/NEWS
@@ -15,12 +15,12 @@ Current git version
     - +monitors.by-name.+ is valid
     - +monitors..by-name.+ is *invalid*
 
-  * Many boolean style settings were formely of type int. Now, these are
+  * Many boolean style settings were formerly of type int. Now, these are
     boolean settings.
   * The 'toggle' command only works for boolean settings. For the former
-    behaviour for int-typed settings, use 'cycle_value'.
+    behavior for int-typed settings, use 'cycle_value'.
   * Writing '%%' in the 'sprintf' format string now gives a literate '%', just
-    as printf. Formely it stayed '%%'.
+    as printf. Formerly it stayed '%%'.
   * The 'keybind' command now accepts all valid key symbols, even if they are
     not present on the current keyboard layout at the time of setup.
   * 'detect_monitors' has an additional '--list-all' parameter
@@ -30,7 +30,7 @@ Current git version
   * list_rules now prints regex-based rule conditions with '~' instead of '='
   * new command: export (convenience wrapper around setenv)
   * the 'remove' command now tries to preserve the focus and the client
-    arrangement. Intutively speaking, 'remove' is undoing a frame split.
+    arrangement. Intuitively speaking, 'remove' is undoing a frame split.
   * new attributes on every monitor for pad_up pad_down pad_left pad_right
 
 Release 0.7.2 on 2019-05-28
