--- a/NEWS
+++ b/NEWS
@@ -4,17 +4,13 @@ herbstluftwm NEWS -- History of user-visible changes
 Current git version
 -------------------
 
+  * monitor detection via xrandr
+  * detection of external panels
+  * new command: export (convenience wrapper around setenv)
   * The build system is now cmake. See the INSTALL file if you need to
     compile herbstluftwm yourself.
-  * Formerly, double dots in object paths were allowed (similar to double
-    slashes in file paths in unix). Right now, they are only allowed at the end
-    (which is necessary for the tab-completion of attr):
-    - +monitors+ is valid
-    - +monitors.+ is valid
-    - +monitors..+ is valid
-    - +monitors.by-name.+ is valid
-    - +monitors..by-name.+ is *invalid*
-
+  * the 'remove' command now tries to preserve the focus and the client
+    arrangement. Intuitively speaking, 'remove' is undoing a frame split.
   * Many boolean style settings were formerly of type int. Now, these are
     boolean settings.
   * The 'toggle' command only works for boolean settings. For the former
@@ -26,12 +22,16 @@ Current git version
   * 'detect_monitors' has an additional '--list-all' parameter
   * do not change the focus (for focus_follows_mouse=1) when an unmanaged
     dialog (e.g. a rofi menu or a notification) closes.
-  * monitor detection via xrandr
   * list_rules now prints regex-based rule conditions with '~' instead of '='
-  * new command: export (convenience wrapper around setenv)
-  * the 'remove' command now tries to preserve the focus and the client
-    arrangement. Intuitively speaking, 'remove' is undoing a frame split.
   * new attributes on every monitor for pad_up pad_down pad_left pad_right
+  * Formerly, double dots in object paths were allowed (similar to double
+    slashes in file paths in unix). Right now, they are only allowed at the end
+    (which is necessary for the tab-completion of attr):
+    - +monitors+ is valid
+    - +monitors.+ is valid
+    - +monitors..+ is valid
+    - +monitors.by-name.+ is valid
+    - +monitors..by-name.+ is *invalid*
 
 Release 0.7.2 on 2019-05-28
 ---------------------------
