Add apply_rules command
The apply_rules command applies all rules to a specified already managed
client. This is useful for experimenting with rules and for the handling
of clients that change their WM_CLASS after the window appears.

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Current git version
 
   * monitor detection via xrandr
   * detection of external panels
+  * new command: apply_rules
   * new command: export (convenience wrapper around setenv)
   * The build system is now cmake. See the INSTALL file if you need to
     compile herbstluftwm yourself.
