Fix some typos in doc and www (#672)

--- a/www/faq.txt
+++ b/www/faq.txt
@@ -305,7 +305,7 @@ for i in ${!tag_names[@]} ; do
 done
 
 # Add a keybinding for locking the current tag to the monitor it is displayed
-# on. This is done by safing the current monitor index in the my_monitor
+# on. This is done by saving the current monitor index in the my_monitor
 # attribute of the focused tag. If the monitor has a (nonempty) name, use the
 # monitor name instead of its index.
 herbstclient keybind $Mod-t chain \
@@ -337,7 +337,7 @@ release the locking and to allow the tag to be displayed on any monitor.
 
 
 
-Q: How can I have a seperate list of tags per monitor?
+Q: How can I have a separate list of tags per monitor?
 ------------------------------------------------------
 
 As a solution: add the desired tags for each monitor and then configure the
@@ -359,10 +359,10 @@ done
 
 for i in ${!tag_keys[@]} ; do
     key="${tag_keys[$i]}"
-    # they kebinding is as follows: the or executes the commands seperated by
+    # the keybinding works as follows: the or executes the commands separated by
     # CASE and stops executing them after the first of those succeeds.
     # the first command is: check that we are on monitor 3 and can switch to tag "${mon1_names[$i]}"
-    # if only one of these to steps fail, try the second one (and so one).
+    # if only one of these two steps fail, try the second one (and so one).
     # The setup for two monitors is as follows:
     hc keybind "$Mod-$key" \
         or CASE and . compare monitors.focus.index = 0 . use "${mon1_names[$i]}" \
