--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ Current git version
   * new command: apply_rules
   * new command: export (convenience wrapper around setenv)
   * new command: drag (initiates moving/resizing a window by mouse)
+  * if tags have been configured through EWMH before herbstluftwm starts (from
+    a previous running window manager), then herbstluftwm re-uses these tags
+    (start with --no-tag-import to disable this)
   * The build system is now cmake. See the INSTALL file if you need to
     compile herbstluftwm yourself.
   * the 'remove' command now tries to preserve the focus and the client
