Introduce keys_inactive client attribute
The current winterbreeze implementation of keymask was wrong (negated).
Since this is proven to be useful, to block certain keybindings for
concrete clients, we call this feature 'keys_inactive'.

This makes 'keymask' currently an attribute without any effect. The next
step is then to bring back the old behaviour of 'keymask'

See also #713.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,7 @@ Current git version
   * detection of external panels
   * new command: apply_rules
   * new command: export (convenience wrapper around setenv)
+  * new client attribute: key_inactive (negation of keymask)
   * new command: drag (initiates moving/resizing a window by mouse)
   * if tags have been configured through EWMH before herbstluftwm starts (from
     a previous running window manager), then herbstluftwm re-uses these tags
