Frame index for empty frame
A new frame index 'e' specifier that finds an empty frame as close as
possible to the focused frame.

This implements #710.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,12 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
+Current git version
+-------------------
+
+  * the frame index 'e' refers to the first empty frame (e.g. 'rule index=e' places
+    new windows in empty frames, if possible)
+
 Release 0.8.0 on 2020-04-09
 ---------------------------
 
