--- a/INSTALL
+++ b/INSTALL
@@ -84,8 +84,8 @@ valgrind-xephyr.sh from your existing X session:
     mkdir -p ~/.config/herbstluftwm
     cp share/autostart ~/.config/herbstluftwm/
 
-5. add the share/herbstclient-completion to your
-   /usr/share/bash-completion/completions folder or source it in your bashrc
+5. add the share/herbstclient to your /usr/share/bash-completion/completions
+   folder or source it in your bashrc
 6. run it in a session that has no windowmanager yet
 
 ==== Starting Herbstluftwm ====
