--- a/www/faq.txt
+++ b/www/faq.txt
@@ -91,9 +91,9 @@ the according (internal) command directly is called.
 
 Q: How can I let single clients float?
 --------------------------------------
-Assign a shortcut for +herbstclient attr clients.focus.floating toggle+. Also,
-since version 0.8 herbstluftwm floats some clients like dialogs by default
-(you can disable this with a rule).
+You can assign a shortcut for +herbstclient attr clients.focus.floating toggle+.
+Also, herbstluftwm floats some clients like dialogs by default (you can disable
+this with a rule). Single floating clients are supported since version 0.8.
 
 Q: I use GIMP very often, how can I use it without floating?
 ----------------------------------------------------------------
