Keyboard resizing of sizehints clients
As a follow up to #790 / b3e6419, make the keyboard resizing of floated
clients also work for floated clients with sizehints. The code is
getting a bit messy, but I leave the clean-up for future PRs.

--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ Current git version
     new windows in empty frames, if possible)
   * new setting 'hide_covered_windows' to improve the appearance when used with
     a compositor.
+  * resize floating windows with the same command ('resize') as in tiling mode
+    and thus the same keybindings as in tiling mode.
 
 Release 0.8.0 on 2020-04-09
 ---------------------------
