Make cycle_all traverse also floating clients
There is no need to adjust the description of the cycle_all command in
the man page because it is still/again true that cycle_all traverses all
windows and frames on a tag.

This fixes #732.

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,7 @@ Current git version
   * resize floating windows with the same command ('resize') as in tiling mode
     and thus the same keybindings as in tiling mode.
   * keybind now checks that the bound command exists.
+  * cycle_all (Alt-Tab) now also traverses floating clients
 
 Release 0.8.0 on 2020-04-09
 ---------------------------
