--- a/AUTHORS
+++ b/AUTHORS
@@ -8,6 +8,7 @@ Daniel Danner
 Johannes Jordan
 Florian Bruhin
 ypnos
+Simon
 Hans-Peter Deifel
 dnnr
 Christoph Egger
@@ -15,9 +16,9 @@ Tyler Thomas Hart
 Bastien Dejean
 Simon Ruderich
 Gabor Adam Toth
-Simon
 Manuel
 Johannes Schilling
+Bohdan Potměkleč
 johnLate
 Florian Schmaus
 Campbell Barton
